# 011-aerospace-orbit-calc

./: .env.example  README.md  debug_pert.py  debug_pert2.py  pyproject.toml  requirements.txt  setup_build.py  test_perturbation_system.py
cpp/: CMakeLists.txt
cpp/include/: batch_propagator.hpp  perturbation_engine.hpp  sgp4_model.hpp  sgp4_propagator.hpp  wgs84_converter.hpp
cpp/src/: batch_propagator.cpp  pybind_module.cpp  sgp4_model.cpp  sgp4_propagator.cpp  wgs84_converter.cpp
orbit_calc/: __init__.py  _sgp4_binding.cp312-win_amd64.pyd  db_writer.py  engine.py  kafka_consumer.py  main.py  perturbations.py  propagator.py  space_environment.py  tle_parser.py
