[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "orbit-calc"
version = "1.0.0"
description = "LEO Satellite Orbit Propagation & Collision Avoidance Engine"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka>=2.3",
    "psycopg2-binary>=2.9",
    "numpy>=1.24",
]

[project.scripts]
orbit-calc = "orbit_calc.main:main"

[tool.setuptools.packages.find]
include = ["orbit_calc*"]
